[package]
name = "block_graph"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
readme = "README.md"

[dependencies]
bdk_chain = { git = "https://github.com/bitcoindevkit/bdk", rev = "be356d5fda56ca01d3540d767e1566559092c4d0" }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
skiplist = { path = "../skiplist", version = "0.1.0" }

[features]
default = ["std", "serde"]
std = ["bdk_chain/std"]
serde = ["dep:serde", "bdk_chain/serde"]

[dev-dependencies.block_graph]
path = "."

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "from_changeset"
harness = false

[[bench]]
name = "canonical_view"
harness = false
