[package]
name = "block_graph"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
readme = "README.md"

[dependencies]
bdk_chain = { git = "https://github.com/bitcoindevkit/bdk", rev = "abe121d0445aa1de848bfa335ee0204fabeb5d17" }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std", "serde"]
std = ["bdk_chain/std"]
serde = ["dep:serde", "bdk_chain/serde"]

[dev-dependencies.block_graph]
path = "."

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "block_graph_checkpoint"
harness = false

[[bench]]
name = "from_changeset"
harness = false

[[bench]]
name = "canonical_view"
harness = false
