[package]
name = "block_graph"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
readme = "README.md"


[[bench]]
name = "checkpoint"
harness = false

[[bench]]
name = "apply_update"
harness = false

[[bench]]
name = "from_changeset"
harness = false

[[bench]]
name = "is_block_in_chain"
harness = false

[[bench]]
name = "reorg"
harness = false

[dependencies]
bdk_chain = { git = "https://github.com/bitcoindevkit/bdk", rev = "abe121d0445aa1de848bfa335ee0204fabeb5d17" }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std", "serde"]
std = ["bdk_chain/std"]
serde = ["dep:serde", "bdk_chain/serde"]

[dev-dependencies.block_graph]
path = "."

[dev-dependencies]
criterion = "0.2"
