[package]
name = "skiplist"
version = "0.1.0"
edition = "2021"
readme = "README.md"
rust-version = "1.63.0"

[dependencies]
rand = "0.8"

[dev-dependencies]
# LagginTimes:generic_checkpoint
bdk_chain = { git = "https://github.com/LagginTimes/bdk", rev = "4dce5add0801bdbb52e1997386aed8f3455ff88e" }
# bdk_chain = { path = "../../bdk/crates/chain" }
criterion = { version = "0.2" }

[[bench]]
name = "skiplist"
harness = false

[[bench]]
name = "skiplist_range"
harness = false

[[bench]]
name = "checkpoint"
harness = false
