[package]
name = "skiplist"
version = "0.1.0"
edition = "2021"
readme = "README.md"
rust-version = "1.63.0"

[dependencies]
rand = "0.8"

[dev-dependencies]
bdk_chain = { git = "https://github.com/bitcoindevkit/bdk", rev = "126ebda443baebe4886a16e397d76270ac7c21d7" }
criterion = { version = "0.2" }

[[bench]]
name = "skiplist"
harness = false

[[bench]]
name = "skiplist_range"
harness = false

[[bench]]
name = "checkpoint"
harness = false
