[package]
name = "skiplist"
version = "0.1.0"
edition = "2021"
readme = "README.md"
rust-version = "1.85.0"

[dependencies]
rand = "0.8"

[dev-dependencies]
bdk_chain = { git = "https://github.com/bitcoindevkit/bdk", rev = "be356d5fda56ca01d3540d767e1566559092c4d0" }
criterion = { version = "0.2" }

[[bench]]
name = "skiplist"
harness = false

[[bench]]
name = "skiplist_range"
harness = false

[[bench]]
name = "checkpoint"
harness = false
